--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(10, 36, 99, 0.6);
+            background: linear-gradient(rgba(10, 36, 99, 0.7), rgba(30, 136, 229, 0.5)), 
+            url('Steff.jpeg');
         }
 
         .hero-content {
