--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             background: linear-gradient(rgba(10, 36, 99, 0.7), rgba(30, 136, 229, 0.5)), 
                 url('Steff.jpeg');
             background-size: cover;
-            background-position: center center;
+            background-position: center 30%;
             background-repeat: no-repeat;
             display: flex;
             align-items: center;
