--- a/index.html
+++ b/index.html
@@ -843,10 +843,6 @@
     <div class="impact-stats">
         <div class="stats-grid">
             <div class="stat-item">
-                <h3>$15M+</h3>
-                <p>Portfolio Value Managed</p>
-            </div>
-            <div class="stat-item">
                 <h3>500+</h3>
                 <p>Hectares Assessed</p>
             </div>
@@ -872,7 +868,7 @@
         </div>
         <div class="about-content">
             <div class="about-text">
-                <p>I'm an environmental economist passionate about bridging the gap between climate science and financial decision-making. With expertise spanning carbon markets, ESG analytics, and natural resource management, I help organizations transform environmental challenges into strategic opportunities.</p>
+                <p>I am an ESG specialist passionate about bridging the gap between climate science and financial decision-making. My expertise spans carbon markets, ESG analytics, and natural resource governance. I help organizations transform environmental challenges into strategic opportunities.</p>
                 <p>My work has contributed to climate finance strategies across Africa and Europe, supporting institutions in achieving measurable sustainability outcomes while driving economic value.</p>
             </div>
             <div class="expertise-grid">
